--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+import { ThemeScript } from 'astro-theme-toggle';
+import NavBar from "../components/NavBar.astro";
 import "../styles/global.css";
 ---
 
@@ -8,9 +10,11 @@ import "../styles/global.css";
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
+		<ThemeScript />
 		<title>Astro</title>
 	</head>
 	<body>
+		<NavBar></NavBar>
 		<h1>Astro</h1>
 	</body>
 </html>
