--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,20 +1,43 @@
 ---
-import { ThemeScript } from 'astro-theme-toggle';
-import NavBar from "../components/NavBar.astro";
-import "../styles/global.css";
+import GithubIcon from "@lucide/astro/icons/github";
+import Mail from "@lucide/astro/icons/mail";
+import HomeLayout from "../layouts/HomeLayout.astro";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<ThemeScript />
-		<title>Astro</title>
-	</head>
-	<body>
-		<NavBar></NavBar>
-		<h1>Astro</h1>
-	</body>
-</html>
+<HomeLayout title="Luis Fonseca">
+	<main class="max-w-screen-md mx-auto px-4 py-12 my-8">
+		<h1 class="text-6xl font-bold mb-8">Hello there 👋</h1>
+		<p class="text-2xl">
+			I'm Luis Fonseca, a computer science student at <a
+				class="text-(--primary-color) underline"
+				href="https://www.ucr.ac.cr"
+				target="_blank"
+				rel="noopener noreferrer">Universidad de Costa Rica.</a
+			>
+		</p>
+	</main>
+	<footer class="text-center">
+		<p class="flex justify-center gap-4">
+			<a
+				href="mailto:luis.fonsecachinchilla@ucr.ac.cr"
+				target="_blank"
+				rel="noopener noreferrer"
+			>
+				<Mail />
+			</a>
+			<a
+				href="https://github.com/luis-fch"
+				target="_blank"
+				rel="noopener noreferrer"
+			>
+				<GithubIcon />
+			</a>
+		</p>
+	</footer>
+</HomeLayout>
+
+<style>
+	h1 {
+		font-family: "Playfair Display", serif;
+	}
+</style>
