--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -1,5 +1,5 @@
 ---
-import { ThemeScript } from 'astro-theme-toggle';
+import { ThemeScript } from "astro-theme-toggle";
 import NavBar from "../components/NavBar.astro";
 import "../styles/global.css";
 
@@ -16,7 +16,7 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<NavBar></NavBar>
-    <slot />
+		<NavBar />
+		<slot />
 	</body>
 </html>
