Add dark tailwind variant and dark code syntax highlight (#12)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 
 :root {
   --primary-color: #2b6cb0;
@@ -8,4 +9,10 @@
 .dark {
   --primary-color: #bfdbf7;
   background-color: #010400;
+}
+
+[data-theme="dark"] .astro-code,
+[data-theme="dark"] .astro-code span {
+  background-color: var(--shiki-dark-bg) !important;
+  color: var(--shiki-dark) !important;
 }
