--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -15,7 +15,7 @@ const { title } = Astro.props;
 		<ThemeScript />
 		<title>{title}</title>
 	</head>
-	<body>
+	<body class="max-w-screen-md mx-auto">
 		<NavBar />
 		<slot />
 	</body>
