--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import HomeLayout from "../layouts/HomeLayout.astro";
 ---
 
 <HomeLayout title="Luis Fonseca">
-	<main class="max-w-screen-md mx-auto px-4 py-12 my-8">
+	<main class="px-4 py-12 my-8">
 		<h1 class="text-6xl font-bold mb-8">Hello there 👋</h1>
 		<p class="text-2xl">
 			I'm Luis Fonseca, a computer science student at <a
