--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -18,7 +18,7 @@ const getLinkClass = (href: string) =>
   isActive(href) ? activeClass : inactiveClass;
 ---
 
-<div class="flex items-center px-4 py-8 text-xl">
+<nav class="flex items-center px-4 py-8 text-xl">
   <div class="flex-1">
     <a class="text-xl" href="/">LF</a>
   </div>
@@ -38,4 +38,4 @@ const getLinkClass = (href: string) =>
       </li>
     </ul>
   </div>
-</div>
+</nav>
