--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -5,17 +5,6 @@ const links = [
   { href: "/blog", label: "Blog" },
   { href: "/about", label: "About" },
 ];
-
-// Get current page URL
-const currentUrl = Astro.url.pathname;
-const isActive = (href: string) => currentUrl === href;
-// Define a class for active links
-const activeClass = "text-(--primary-color)";
-const inactiveClass =
-  "hover:text-(--primary-color) transition ease-in-out duration-200";
-// Apply active class conditionally
-const getLinkClass = (href: string) =>
-  isActive(href) ? activeClass : inactiveClass;
 ---
 
 <nav class="flex items-center px-4 py-8 text-xl">
@@ -27,7 +16,7 @@ const getLinkClass = (href: string) =>
       {
         links.map((link) => (
           <li>
-            <a class={getLinkClass(link.href)} href={link.href}>
+            <a class="hover:underline" href={link.href}>
               {link.label}
             </a>
           </li>
