--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import HomeLayout from "../layouts/HomeLayout.astro";
 		<h1 class="text-6xl font-bold mb-8">Hello there 👋</h1>
 		<p class="text-2xl">
 			I'm Luis Fonseca, a computer science student at <a
-				class="text-(--primary-color) underline"
+				class="underline"
 				href="https://www.ucr.ac.cr"
 				target="_blank"
 				rel="noopener noreferrer">Universidad de Costa Rica.</a
