--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -2,10 +2,10 @@
 const { title, description, published_date, id } = Astro.props;
 ---
 
-<a href={`/blog/${id}`} class="px-2 py-2 hover:shadow-md transition-shadow rounded-lg">
+<a href={`/blog/${id}`} class="py-2 group">
   <div class="flex items-baseline gap-1">
-    <h2 class="text-2xl font-bold">{title}</h2>
-    <p class="">{published_date}</p>
+    <h2 class="text-2xl font-bold group-hover:underline">{title}</h2>
+    <p class="dark:text-gray-400 text-gray-600">{published_date}</p>
   </div>
   <p class="text-lg">{description}</p>
 </a>
