Update HomeLayout titles for blog and index pages

--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -13,7 +13,7 @@ const { post } = Astro.props;
 const { Content } = await render(post);
 ---
 
-<HomeLayout>
+<HomeLayout title={`${post.data.title}`}>
   <main class="max-w-screen-md mx-auto px-4 py-12 my-8">
     <div class="">
       <Content />
