--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Mail from "@lucide/astro/icons/mail";
 import HomeLayout from "../layouts/HomeLayout.astro";
 ---
 
-<HomeLayout title="Luis Fonseca">
+<HomeLayout title="Home">
 	<main class="px-4 py-12 my-8">
 		<h1 class="text-6xl font-bold mb-8">Hello there 👋</h1>
 		<p class="text-2xl">
