--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -14,7 +14,7 @@ const { Content } = await render(post);
 ---
 
 <HomeLayout title={`${post.data.title}`}>
-  <main class="max-w-screen-md mx-auto px-4 py-12 my-8">
+  <main class="px-4 py-12 my-8">
     <div class="">
       <Content />
     </div>
