--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -8,7 +8,7 @@ interface Props {
 const { title, description, published_date, id } = Astro.props as Props;
 ---
 
-<a href={`/blog/${id}`} class="py-2 group">
+<a href={`/blog/${id}`} class="pb-2 group">
   <div class="flex items-baseline gap-1">
     <h2 class="text-2xl font-bold group-hover:underline">{title}</h2>
     <p class="dark:text-gray-400 text-gray-600">{published_date}</p>
