--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -13,7 +13,7 @@ const sortedPosts = posts.sort(
 
 <HomeLayout title="Blog">
   <main class="px-4 py-12 my-8">
-    <h1 class="text-6xl font-bold mb-8">Recent blog entries</h1>
+    <h1 class="text-6xl font-bold mb-8">Blog</h1>
     <div class="grid gap-2">
       {
         sortedPosts.map((post) => (
