--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -15,8 +15,8 @@ const { Content } = await render(post);
 
 <HomeLayout title={`${post.data.title}`}>
   <main class="px-4 py-12 my-8">
-    <div class="">
+    <article class="blog-content">
       <Content />
-    </div>
+    </article>
   </main>
 </HomeLayout>
