--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,18 +31,12 @@
   @apply text-4xl font-bold my-4;
 }
 
-.blog-content h3 {
-  @apply text-3xl font-semibold my-4;
-}
-
+.blog-content h3,
 .blog-content h4 {
   @apply text-3xl font-semibold my-4;
 }
 
-.blog-content h5 {
-  @apply text-3xl font-medium my-4;
-}
-
+.blog-content h5,
 .blog-content h6 {
   @apply text-3xl font-medium my-4;
 }
