--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -82,7 +82,7 @@
 
 /* Images */
 .blog-content img {
-  @apply max-w-full h-auto my-4 rounded-lg;
+  @apply max-w-full h-auto my-4 rounded-lg m-auto;
 }
 
 /* Links */
