--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -18,7 +18,9 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body class="max-w-screen-md mx-auto">
-		<NavBar />
+		<header>
+			<NavBar />
+		</header>
 		<slot />
 	</body>
 </html>
