--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -2,20 +2,20 @@
 import { Toggle } from "astro-theme-toggle";
 
 const links = [
-  { href: "/blog", label: "Blog" },
+  { href: "/blog", label: "blog", aria: "Blog page" },
 ];
 ---
 
-<nav class="flex items-center px-4 py-8 text-xl">
+<nav class="flex items-center px-4 py-4 text-lg">
   <div class="flex-1">
-    <a class="text-xl" href="/">LF</a>
+    <a href="/" aria-label="Home page">LF</a>
   </div>
   <div class="flex-none">
     <ul class="flex flex-row gap-8">
       {
         links.map((link) => (
           <li>
-            <a class="hover:underline" href={link.href}>
+            <a class="hover:underline" href={link.href} aria-label={link.aria}>
               {link.label}
             </a>
           </li>
