Change footer div to nav

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import HomeLayout from "../layouts/HomeLayout.astro";
 		</p>
 	</main>
 	<footer class="text-center">
-		<div class="flex justify-center gap-4">
+		<nav class="flex justify-center gap-4">
 			<a
 				href="mailto:luis.fonsecachinchilla@ucr.ac.cr"
 				target="_blank"
@@ -34,6 +34,6 @@ import HomeLayout from "../layouts/HomeLayout.astro";
 			>
 				<GithubIcon />
 			</a>
-		</div>
+		</nav>
 	</footer>
 </HomeLayout>
