Remove text-center class from footer

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import HomeLayout from "../layouts/HomeLayout.astro";
 			>
 		</p>
 	</main>
-	<footer class="text-center">
+	<footer>
 		<nav class="flex justify-center gap-4">
 			<a
 				href="mailto:luis.fonsecachinchilla@ucr.ac.cr"
