--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -19,7 +19,7 @@ const { Content } = await render(post);
       <section>
         <h1 class="text-3xl font-bold mb-0">{post.data.title}</h1>
         <div
-          class="flex align-text-top gap-3 dark:text-white/60 text-black/60 text-base"
+          class="flex gap-3 dark:text-white/60 text-black/60 text-base"
         >
           <span>
             {
