Change body max-w-screen from md to sm

--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -17,7 +17,7 @@ const { title } = Astro.props;
 		<ClientRouter />
 		<title>{title}</title>
 	</head>
-	<body class="max-w-screen-md mx-auto">
+	<body class="max-w-screen-sm mx-auto">
 		<header>
 			<NavBar />
 		</header>
