--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,6 +17,10 @@ h6 {
   font-family: 'Roboto Slab', serif;
 }
 
+p {
+  @apply text-black/90 dark:text-white/90;
+}
+
 .dark {
   background-color: #0f1115;
 }
@@ -231,7 +235,7 @@ h6 {
 /* Code */
 /* The code block styles are applied by shiki */
 .blog-content pre {
-  @apply p-4 my-4 rounded-lg;
+  @apply p-3 my-4 rounded-lg;
 }
 
 .blog-content code {
