Update BlogCard component to use base text size for description

--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -13,5 +13,5 @@ const { title, description, published_date, id } = Astro.props as Props;
     <h2 class="text-lg font-bold group-hover:underline">{title}</h2>
     <span class="text-black/60 dark:text-white/60">{published_date}</span>
   </div>
-  <p class="text-lg">{description}</p>
+  <p class="text-base">{description}</p>
 </a>
