--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,7 +4,7 @@
   background-color: #fafafa;
   scrollbar-gutter: stable;
   scroll-behavior: smooth;
-  font-family: 'Plus Jakarta Sans', sans;
+  font-family: 'Plus Jakarta Sans', sans-serif;
 }
 
 @font-face {
