--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,7 +11,7 @@
   font-display: swap;
   font-family: 'Plus Jakarta Sans';
   font-style: normal;
-  font-weight: 300, 400, 600, 700;
+  font-weight: 100 800;
   src: url('/fonts/PlusJakartaSans-Variable.woff2') format('woff2');
 }
 
