Change university name to english and add underline color (#48)

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,13 +6,13 @@ import HomeLayout from "../layouts/HomeLayout.astro";
 
 <HomeLayout title="Home">
 	<main class="px-4 py-12 my-8">
-		<h1 class="text-3xl font-bold mb-8">Hello there 👋</h1>
+		<h1 class="text-3xl font-bold mb-8">Hello there 👋🏼</h1>
 		<p class="text-lg">
-			I'm Luis Fonseca, a computer science student at <a
-				class="underline"
+			I'm Luis Fonseca, a computer science student at the <a
+				class="underline decoration-site-primary"
 				href="https://www.ucr.ac.cr"
 				target="_blank"
-				rel="noopener noreferrer">Universidad de Costa Rica.</a
+				rel="noopener noreferrer">University of Costa Rica.</a
 			>
 		</p>
 	</main>
