--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -17,10 +17,8 @@ const { Content } = await render(post);
   <main class="px-4 py-12 my-8">
     <article>
       <section>
-        <h1 class="text-3xl font-bold mb-0">{post.data.title}</h1>
-        <div
-          class="flex gap-3 text-base text-current/60"
-        >
+        <h1 class="text-3xl font-bold">{post.data.title}</h1>
+        <div class="flex gap-3 text-base text-current/60">
           <span>
             {
               post.data.published_date.toLocaleDateString("en-US", {
