--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -1,7 +1,7 @@
 ---
 import GithubIcon from "@lucide/astro/icons/github";
 import Mail from "@lucide/astro/icons/mail";
-import HomeLayout from "../layouts/HomeLayout.astro";
+import HomeLayout from "../../layouts/HomeLayout.astro";
 ---
 
 <HomeLayout title="Home">
