--- a/src/pages/en/blog.astro
+++ b/src/pages/en/blog.astro
@@ -1,7 +1,7 @@
 ---
 import { getCollection } from "astro:content";
-import HomeLayout from "../layouts/HomeLayout.astro";
-import BlogCard from "../components/BlogCard.astro";
+import HomeLayout from "../../layouts/HomeLayout.astro";
+import BlogCard from "../../components/BlogCard.astro";
 
 const posts = await getCollection("blog");
 const recentPostsCount = 3;
