--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -1,12 +1,14 @@
 ---
 import { ClientRouter } from "astro:transitions";
+import { getLangFromUrl } from "../i18n/utils";
 import NavBar from "../components/NavBar.astro";
 import "../styles/global.css";
 
+const lang = getLangFromUrl(Astro.url);
 const { title } = Astro.props;
 ---
 
-<html lang="en">
+<html lang={lang}>
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
