--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -1,4 +1,5 @@
 ---
+import { getLangFromUrl } from '../i18n/utils';
 interface Props {
   title: string;
   description: string;
@@ -6,9 +7,11 @@ interface Props {
   id: string;
 }
 const { title, description, published_date, id } = Astro.props as Props;
+const lang = getLangFromUrl(Astro.url);
+const slug = id.split('/').slice(1).join('/');
 ---
 
-<a href={`/blog/${id}`} class="pb-2 group">
+<a href={`/${lang}/blog/${slug}`} class="pb-2 group">
   <div class="flex items-baseline gap-1">
     <h2 class="text-lg font-bold underline decoration-site-primary">{title}</h2>
     <span class="text-current/60">{published_date}</span>
