--- a/src/pages/es/blog.astro
+++ b/src/pages/es/blog.astro
@@ -1,9 +1,12 @@
 ---
 import { getCollection } from "astro:content";
+import { getLangFromUrl } from "../../i18n/utils";
 import HomeLayout from "../../layouts/HomeLayout.astro";
 import BlogCard from "../../components/BlogCard.astro";
 
-const posts = await getCollection("blog");
+const lang = getLangFromUrl(Astro.url);
+const allPosts = await getCollection("blog");
+const posts = allPosts.filter((post) => post.id.startsWith(`${lang}`));
 const recentPostsCount = 3;
 
 const sortedPosts = posts.sort(
