Shorten reading time display in blog post (#27)

--- a/src/pages/[lang]/blog/[...slug].astro
+++ b/src/pages/[lang]/blog/[...slug].astro
@@ -37,7 +37,7 @@ const { Content } = await render(post);
           <span>
             {
               post.data.reading_time
-                ? `${post.data.reading_time} min read`
+                ? `${post.data.reading_time} min`
                 : "-"
             }</span
           >
