Update index page redirection to use dynamic default language (#51)

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import { defaultLanguage } from "../i18n/ui";
 export const prerender = false
-return Astro.redirect('/en/');
+return Astro.redirect(`/${defaultLanguage}/`);
 ---
