--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -5,8 +5,16 @@ const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 
 const links = [
-  { href: `/${lang}/`, label: t("nav.a.home.label"), aria: t("nav.a.home.aria") },
-  { href: `/${lang}/blog`, label: t("nav.a.blog.label"), aria: t("nav.a.blog.aria") },
+  {
+    href: `/${lang}/`,
+    label: t("nav.a.home.label"),
+    aria: t("nav.a.home.aria"),
+  },
+  {
+    href: `/${lang}/blog`,
+    label: t("nav.a.blog.label"),
+    aria: t("nav.a.blog.aria"),
+  },
 ];
 ---
 
