Rename `lang` to `urlLang` for consistency (#51)
Also to distinct between the `lang` from the `[lang]` param

--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -1,5 +1,5 @@
 ---
-import { getLangFromUrl } from '../i18n/utils';
+import { getLangFromUrl } from "../i18n/utils";
 interface Props {
   title: string;
   description: string;
@@ -7,11 +7,11 @@ interface Props {
   id: string;
 }
 const { title, description, published_date, id } = Astro.props as Props;
-const lang = getLangFromUrl(Astro.url);
-const slug = id.split('/').slice(1).join('/');
+const urlLang = getLangFromUrl(Astro.url);
+const slug = id.split("/").slice(1).join("/");
 ---
 
-<a href={`/${lang}/blog/${slug}`} class="pb-2 group">
+<a href={`/${urlLang}/blog/${slug}`} class="pb-2 group">
   <div class="flex items-baseline gap-1">
     <h2 class="text-lg font-bold underline decoration-site-primary">{title}</h2>
     <span class="text-current/60">{published_date}</span>
