Update blog post layout title to include my name

--- a/src/pages/[lang]/blog/[...slug].astro
+++ b/src/pages/[lang]/blog/[...slug].astro
@@ -18,7 +18,7 @@ const post = Astro.props;
 const { Content } = await render(post);
 ---
 
-<HomeLayout title={`${post.data.title}`}>
+<HomeLayout title={`${post.data.title} | Luis Fonseca`}>
   <main class="px-4 py-12 my-8">
     <article>
       <section>
