--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -11,7 +11,7 @@ const urlLang = getLangFromUrl(Astro.url);
 const slug = id.split("/").slice(1).join("/");
 ---
 
-<a href={`/${urlLang}/blog/${slug}`} class="pb-2 group">
+<a href={`/${urlLang}/projects/${slug}`} class="pb-2 group">
   <div class="flex items-baseline gap-1">
     <h2 class="text-lg font-bold underline decoration-site-primary">{title}</h2>
     {tags.map((tag) => <span class="text-current/60">{tag}</span>)}
