Add projects link to navigation bar (#56)

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -15,6 +15,11 @@ const links = [
     label: t("nav.a.blog.label"),
     aria: t("nav.a.blog.aria"),
   },
+  {
+    href: `/${urlLang}/projects`,
+    label: t("nav.a.projects.label"),
+    aria: t("nav.a.projects.aria"),
+  },
 ];
 ---
 
